lfd459/security/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: myclaim
  containers:
  - image: bitnami/kubectl:1.33
    name: secret-getter
    volumeMounts:
    - name: data
      mountPath: /mnt/data
    command:
    - bin/bash
    - -c
    - "while true; do kubectl get secret lfsecret -o json; done"
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
