lfd459/security/simple-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-app
  name: simple-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: logs
        emptyDir: {}
      containers:
      - image: 10.97.40.62:5000/simple-app:v3
        imagePullPolicy: IfNotPresent
        name: simple-app
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: logs
          mountPath: /app/logs
        startupProbe:
          exec:
            command:
              - stat
              - /app/logs/date.out
          periodSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      - name: logger
        image: busybox
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: logs
          mountPath: /var/log/simple-app
        command:
        - /bin/sh
        - -c
        - "tail -f /var/log/simple-app/date.out"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      - name: log-proxy
        image: nginxinc/nginx-unprivileged
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: logs
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
