lfd459/security/simple-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simple-network-policy
spec:
  podSelector:
    matchLabels:
      app: simple-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: simple
    ports:
    - protocol: TCP
      port: 8080
